// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`quote Empty quote 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "nodes": [],
        "raw": ">",
        "type": "quote",
      },
    ],
    "type": "line",
  },
]
`;

exports[`quote Simple quote 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "nodes": [
          {
            "raw": " Simple quote",
            "text": " Simple quote",
            "type": "plain",
          },
        ],
        "raw": "> Simple quote",
        "type": "quote",
      },
    ],
    "type": "line",
  },
]
`;
